Color and spacing correcting

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -243,7 +243,7 @@ a:hover{
 .btn-text:link,
 .btn-text:visited {
     background-color: transparent;
-    color: #7faf70;
+    color: #85998E;
     font-size: 1rem;
     font-weight: 500;
     text-transform: uppercase;
@@ -257,9 +257,9 @@ a:hover{
 }
 
 .btn-outline:link, .btn-outline:visited {
-    color: #7faf70;
+    color: #85998E;
     background-color: transparent;
-    border: 1.7px solid #7faf70;
+    border: 1.7px solid #85998E;
     border-radius: 4px;
     text-transform: uppercase;
     font-size: 1.1rem;
@@ -271,8 +271,8 @@ a:hover{
 
 .btn-outline:hover, .btn-outline:active {
     color: #fff;
-    background-color: #7faf70;
-    border: 1.7px solid #7faf70;
+    background-color: #85998E;
+    border: 1.7px solid #85998E;
     border-radius: 4px;
 }
 
@@ -501,7 +501,7 @@ a:hover{
 .blog__categories{
     padding-left: 0;
     border-bottom: 1px solid #85998E;
-    padding-bottom: 2%;
+    padding-bottom: 3%;
     margin-bottom: 0;
 }
 
@@ -515,34 +515,40 @@ a:hover{
 }
 
 .blog__categories li{
-    display: inline-block;
-    padding-right: 5%;    
+    display: inline-block;    
 }
 
 .search{
-    border: solid #85998E 1.5px;
-    border-radius: 5px 5px 5px 5px;
+    border: 1.5px solid #85998E;
+    border-radius: 2.5px;
+    transition: border 300ms;
+}
+
+.search:hover{
+    border: 1.5px solid #6E7F76;
 }
 
 .search-field{
+    margin-left: .5rem;
     border: none;
+    outline: none !important;
+    box-shadow: none;
 }
 
 .blogpage__searchbutton{
-    background: #85998E;
-    border-radius: 2.5px 2.5px 2.5px 2.5px;
-    border: solid #85998E;
+    background-color: #85998E;
+    border: 2px solid #85998E;
+    transition: background-color 300ms, border 300ms;
 }
 
 .blogpage__searchbutton:hover{
-    background: #6E7F76;
-    border-radius: 2.5px 2.5px 2.5px 2.5px;
-    border: solid #6E7F76;
+    background-color: #6E7F76;
+    border: 2px solid #6E7F76;
 }
 
 .blogpage__searchbutton:active{
     background: #5F6C65;
-    border-radius: 2.5px 2.5px 2.5px 2.5px;
+    border-radius: 2.5px;
     border: solid #5F6C65;
 }
 
@@ -556,10 +562,6 @@ a:hover{
     border-bottom: 1px solid #85998e;   
 }
 
-.blog__contentcontainer{
-    padding-right: 2%;
-}
-
 .blog__post:last-child{
     border-bottom: none;
     padding-bottom: 0;
@@ -568,7 +570,6 @@ a:hover{
 .blog__picturecontainer{
     width: 100%;
     height: 40vh;
-    padding-left: 2%;
 }
 
 .blog__picture{
